--- a/CasaUrsuHTML.html
+++ b/CasaUrsuHTML.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CasaUrsuluiMD</title>
-    <link rel="stylesheet" href="/CasaUrsuCSS.css">
+    <link rel="stylesheet" href="CasaUrsuCSS.css">
 </head>
 <body>
         <nav>
