--- a/CasaUrsuHTML.html
+++ b/CasaUrsuHTML.html
@@ -23,17 +23,17 @@
        <p class="text2">Produsele noastre: </p>
        <ol class="list2">
         <li>Miere.</li>
-        <img src="/sources/List1..jpg" alt="list1" width="300px" height="auto" class = "phoneimage">
+        <img src="sources/List1..jpg" alt="list1" width="300px" height="auto" class = "phoneimage">
         <li>Polen.</li>
-        <img src="/sources/Polen.jpg" alt="polen" width="300px" height="auto" class = "phoneimage">
+        <img src="sources/Polen.jpg" alt="polen" width="300px" height="auto" class = "phoneimage">
         <li>Păstură.</li>
-        <img src="/sources/pastura.jpg" alt="pastura" width="300px" height="160px" class="phoneimage">
+        <img src="sources/pastura.jpg" alt="pastura" width="300px" height="160px" class="phoneimage">
        </ol>
 
 
        <div class="container"> 
 
-        <img src="/sources/InformativeImage.jpg" alt="honey" class="representation">
+        <img src="sources/InformativeImage.jpg" alt="honey" class="representation">
         <p class="textdow"><em class="scope">Scopul nostru</em> este de a aduce în fața oamenilor un produs natural, sănătos și plin de beneficii.</p>
         <p class="text"><span class="honey">Produsele apicole</span> sunt recunoscute pentru proprietățile sale nutritive și terapeutice, iar prin vânzarea acestelor, se urmărește nu doar satisfacerea cerinței pentru alimente de calitate, dar și educarea publicului în legătură cu importanța consumului de produse naturale.</p>
         
@@ -65,7 +65,7 @@
             <li>Detoxifiere.</li>
             <p class="sublist">Polenul de albine are un efect detoxifiant asupra organismului, ajutând la eliminarea toxinelor și la curățarea ficatului, rinichilor și a altor organe de excreție.</p>
         </ol>
-        <img src="/sources/pasturainfo.jpg" alt="info"  class="representation">
+        <img src="sources/pasturainfo.jpg" alt="info"  class="representation">
         <p class="upspace">>Beneficiile păsturii: </p>
         <ol class="list1">
             <li>Combaterea stresului și anxietății.</li>
@@ -77,8 +77,8 @@
         </ol>
         <h2 class="upspace">Galeria Magazinului.</h2>
         <div class="inline">
-        <img src="/sources/ShowOff.jpg" alt="fso" width="600px" height="auto" class="upper">
-        <img src="/sources/ShowHoney.jpg" alt="shoney" width="600px" height="auto" class="lower">
+        <img src="sources/ShowOff.jpg" alt="fso" width="600px" height="auto" class="upper">
+        <img src="sources/ShowHoney.jpg" alt="shoney" width="600px" height="auto" class="lower">
         <img src="sources/ShowHoneyStand.jpg" alt="shoneystand" width="600px" height="auto" class="centered">
         </div>
     </body>
